2019-1/220/users/4390/executions/1628_2924.log
== TEST (2019-04-02 20:32:16) 
-- CODE:
int(S=0+3*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S=0+3*60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:32:28) 
-- CODE:
int(S=0+3*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S=0+3*60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:32:56) 
-- CODE:
int(S=0+3*1min)
-- ERROR:
File "XXXX", line 1
    int(S=0+3*1min)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:32:58) 
-- CODE:
int(S=0+3*1min)
-- ERROR:
File "XXXX", line 1
    int(S=0+3*1min)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:33:09) 
-- CODE:
int(S=0+3*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S=0+3*60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:33:20) 
-- CODE:
int(S = 0 + 3 * 60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S = 0 + 3 * 60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:33:43) 
-- CODE:
int(S = 0 + 1 * 60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S = 0 + 1 * 60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:33:57) 
-- CODE:
int(S=0+1*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(S=0+1*60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:34:14) 
-- CODE:
print(S=0+1*60)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(S=0+1*60)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:35:56) 
-- CODE:
print(S=0+10*20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(S=0+10*20)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:36:30) 
-- CODE:
print(0+4*60)
-- OUTPUT:
240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:36:34) 
-- CODE:
print(0+4*60)
-- EXECUTION TIME:
0.282617
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
240
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
240
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
240
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:36:40) 
-- CODE:
print(0+3*60)
-- OUTPUT:
180
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:36:41) 
-- CODE:
print(0+3*60)
-- EXECUTION TIME:
0.13401
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
180
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
180
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
180
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:36:56) 
-- CODE:
print(0+1*60)
-- OUTPUT:
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:36:57) 
-- CODE:
print(0+1*60)
-- EXECUTION TIME:
0.164434
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
60
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
60
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
60
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:37:12) 
-- CODE:
print(0+10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:13) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.208234
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:17) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.153309
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:26) 
-- CODE:
print(10*20)
-- EXECUTION TIME:
0.187447
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:28) 
-- CODE:
print(10*20)
-- EXECUTION TIME:
0.22104
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:37:28) 
-- CODE:
print(10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:29) 
-- CODE:
print(10*20)
-- EXECUTION TIME:
0.179963
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:37:57) 
-- CODE:
print(0+2*10)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:37:59) 
-- CODE:
print(0+2*10)
-- EXECUTION TIME:
0.221702
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
20
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
20
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:38:36) 
-- CODE:
print(S=0+10*20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(S=0+10*20)
TypeError: 'S' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:38:37) 
-- CODE:
print(S=0+10*20)
-- EXECUTION TIME:
0.211724
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1628/2924/main.py", line 1, in <module>
    print(S=0+10*20)
TypeError: 'S' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:38:44) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.185596
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:38:45) 
-- CODE:
print(0+10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:38:45) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.168962
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:39:14) 
-- CODE:
print(0+20*10)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:39:16) 
-- CODE:
print(0+20*10)
-- EXECUTION TIME:
0.211606
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:39:42) 
-- CODE:
print(0+20*10)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:39:57) 
-- CODE:
print(0+20*10)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:39:57) 
-- CODE:
print(0+20*10)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:39:59) 
-- CODE:
print(0+20*10)
-- EXECUTION TIME:
0.208224
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:39:59) 
-- CODE:
print(0+20*10)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:19) 
-- CODE:
int(0)
int(1)
int(2)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:20) 
-- CODE:
int(0)
int(1)
int(2)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:41:21) 
-- CODE:
int(0)
int(1)
int(2)
-- EXECUTION TIME:
0.192957
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:

-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:

-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:21) 
-- CODE:
int(0)
int(1)
int(2)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:42) 
-- CODE:
int(10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:43) 
-- CODE:
int(10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:41:50) 
-- CODE:
print(10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:41:52) 
-- CODE:
print(10*20)
-- EXECUTION TIME:
0.298025
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:42:03) 
-- CODE:
print(10*20+0)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:42:04) 
-- CODE:
print(10*20+0)
-- EXECUTION TIME:
0.144782
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:42:38) 
-- CODE:
print(0+v*1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(0+v*1)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:44:52) 
-- CODE:
print(0)
print(0+10)
print(10*20)
-- OUTPUT:
0
10
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:44:55) 
-- CODE:
print(0)
print(0+10)
print(10*20)
-- EXECUTION TIME:
0.148397
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
0
10
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
0
10
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
0
10
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:45:14) 
-- CODE:
print(0)
print(0+10)
print(10*20)
-- OUTPUT:
0
10
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:45:39) 
-- CODE:
print(0+10*20)

-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:45:41) 
-- CODE:
print(0+10*20)

-- EXECUTION TIME:
0.171363
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:14) 
-- CODE:
print(0+10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:46:15) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.133891
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:46:16) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.166556
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:16) 
-- CODE:
print(0+10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:16) 
-- CODE:
print(0+10*20)
-- OUTPUT:
200
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:46:17) 
-- CODE:
print(0+10*20)
-- EXECUTION TIME:
0.30058
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
200
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
200
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
200
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:44) 
-- CODE:
print(0+10*20*60)
-- OUTPUT:
12000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:46:46) 
-- CODE:
print(0+10*20*60)
-- EXECUTION TIME:
0.239795
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
12000
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
12000
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
12000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:46:58) 
-- CODE:
print(0+10*(20*60))
-- OUTPUT:
12000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:47:00) 
-- CODE:
print(0+10*(20*60))
-- EXECUTION TIME:
0.290591
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
12000
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
12000
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
12000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 20:47:27) 
-- CODE:
print(s=0+10*(20*60))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(s=0+10*(20*60))
TypeError: 's' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 20:47:29) 
-- CODE:
print(s=0+10*(20*60))
-- EXECUTION TIME:
0.180865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1628/2924/main.py", line 1, in <module>
    print(s=0+10*(20*60))
TypeError: 's' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
